automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+ <head>
+   <title>title</title>
+ </head>
+ <body>
+ <h1> jessica is the best teacher ever </h1>
+ <p> jessica is from san francisco. She is super smart. AWESOME AWESOME AWESOME.</p>
+ </body>
+</html>
